--- a/password.html
+++ b/password.html
@@ -5,63 +5,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      #strengthIndicator {
-        padding: 10px;
-        background-color: #f3f3f3;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        margin: 10px;
-        width: 150px;
-        text-align: center;
+         #strengthIndicator {
+           padding: 10px;
+
+           border: 1px solid #ccc;
+           border-radius: 5px;
+           margin: 10px;
+           width: 150px;
+           text-align: center;
+
       }
+         .strength-weak {
+         background-color: red;
+       }
+
+       .strength-medium {
+         background-color: yellow;
+         color: black;
+       }
+
+       .strength-strong {
+         background-color: green;
     </style>
   </head>
   <body>
     <input id="inputid" type="text" placeholder="Enter your password here" />
     <div id="strengthIndicator">strength indicator</div>
     <script>
+      const uppercaseLetters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ".split("");
+      const specialCharacters = "!@#$%^&*()-_=+{}[]|\\:;\"'<>,.?/~`".split("");
       let password = document.getElementById("inputid");
-      const specialCharacters = [
-        "!",
-        "@",
-        "#",
-        "$",
-        "%",
-        "^",
-        "&",
-        "*",
-        "(",
-        ")",
-        "-",
-        "_",
-        "=",
-        "+",
-        "{",
-        "}",
-        "[",
-        "]",
-        "|",
-        "\\",
-        ":",
-        ";",
-        '"',
-        "'",
-        "<",
-        ">",
-        ",",
-        ".",
-        "?",
-        "/",
-        "~",
-        "`",
-      ];
-      let length = password.value.length;
-      let array = [1, 2, 3];
-      array.filter();
-      array.map;
       let StrengthIndicator = document.getElementById("strengthIndicator");
-      password.addEventListener("keyup", () => {
+      const RecommendedPasswordLength = 9;
+      let ContainUpperCase = false;
+      let ContainsSpecialCharacter = false;
+
+      password.addEventListener("input", (event) => {
+        let userInput = event.target.value;
+        let length = userInput.length;
         console.log(length);
+
+        ContainUpperCase = false;
+        ContainsSpecialCharacter = false;
+
+        for (let letter of uppercaseLetters) {
+          if (userInput.includes(letter)) {
+            ContainUpperCase = true;
+            break;
+          }
+        }
+
+        for (let char of specialCharacters) {
+          if (userInput.includes(char)) {
+            ContainsSpecialCharacter = true;
+            break;
+          }
+        }
+
+        console.log("Contains Uppercase:", ContainUpperCase);
+        console.log("Contains Special Character:", ContainsSpecialCharacter);
+
+        if (
+          length > RecommendedPasswordLength &&
+          ContainUpperCase == true &&
+          ContainsSpecialCharacter == true
+        ) {
+          StrengthIndicator.className = "strength-strong";
+          StrengthIndicator.textContent = "strong";
+        } else {
+          StrengthIndicator.className = "strength-weak";
+          StrengthIndicator.textContent = "weak";
+        }
       });
     </script>
   </body>
